src/snapshots/alma__infer__tests__infer_expr-34.snap
---
source: src/infer.rs
expression: "infer(\"{ age = 1, age = 1 }\")"

---
Input:

{ age = 1, age = 1 }

---
Output:

[1:11]

Duplicate field `age`

  1│  { age = 1, age = 1 }
   │             ↑↑↑

in record

  1│  { age = 1, age = 1 }

