src/snapshots/alma__infer__tests__infer_expr-35.snap
---
source: src/infer.rs
expression: "infer(\"{ name = 1, age = 1, name = 1 }\")"

---
Input:

{ name = 1, age = 1, name = 1 }

---
Output:

[1:21]

Duplicate field `name`

  1│  { name = 1, age = 1, name = 1 }
   │                       ↑↑↑↑

in record

  1│  { name = 1, age = 1, name = 1 }

