src/snapshots/alma__infer__tests__infer_expr-36.snap
---
source: src/infer.rs
expression: "infer(\"{ { name = 1, age = 1 } | name = 2, name = 3 }\")"

---
Input:

{ { name = 1, age = 1 } | name = 2, name = 3 }

---
Output:

[1:36]

Duplicate field `name`

  1│  { { name = 1, age = 1 } | name = 2, name = 3 }
   │                                      ↑↑↑↑

in record

  1│  { { name = 1, age = 1 } | name = 2, name = 3 }

