src/snapshots/alma__infer__tests__infer_expr-4.snap
---
source: src/infer.rs
expression: "infer(r\"\\n -> \\f -> \\x -> f (n f x)\")"

---
Input:

\n -> \f -> \x -> f (n f x)

---
Output:

((a -> b) -> c -> a) -> (a -> b) -> c -> b
