src/snapshots/alma__infer__tests__infer_expr-5.snap
---
source: src/infer.rs
expression: "infer(r\"\\m -> \\n -> \\f -> \\x -> m (n f) x\")"

---
Input:

\m -> \n -> \f -> \x -> m (n f) x

---
Output:

(a -> b -> c) -> (d -> a) -> d -> b -> c
