src/snapshots/alma__infer__tests__infer_expr-6.snap
---
source: src/infer.rs
expression: "infer(r\"\\n -> \\f -> \\x -> n (\\g -> \\h -> h (g f)) (\\u -> x) (\\u -> u)\")"

---
Input:

\n -> \f -> \x -> n (\g -> \h -> h (g f)) (\u -> x) (\u -> u)

---
Output:

(((a -> b) -> (b -> c) -> c) -> (d -> e) -> (f -> f) -> g) -> a -> e -> g
