src/snapshots/alma__infer__tests__infer_expr-7.snap
---
source: src/infer.rs
expression: "infer(r\"\n      \\x ->\n        let y = x\n        y\n    \")"

---
Input:


      \x ->
        let y = x
        y
    

---
Output:

a -> a
