src/snapshots/alma__infer__tests__infer_expr-8.snap
---
source: src/infer.rs
expression: "infer(r\"\n      \\x ->\n        let y = \\z -> x\n        y\n      \")"

---
Input:


      \x ->
        let y = \z -> x
        y
      

---
Output:

a -> b -> a
