src/snapshots/alma__infer__tests__infer_expr-9.snap
---
source: src/infer.rs
expression: "infer(\"if 1 == 1 then True else False\")"

---
Input:

if 1 == 1 then True else False

---
Output:

Bool
