src/snapshots/alma__infer__tests__infer_expr.snap
---
source: src/infer.rs
expression: "infer(r\"\\f -> \\x -> f x\")"

---
Input:

\f -> \x -> f x

---
Output:

(a -> b) -> a -> b
